--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@sanity/client": "^7.12.0",
+    "@sanity/image-url": "^1.2.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
